<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/blueLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/refreshButton"
            android:contentDescription="@string/refresh_button_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_popup_sync" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:text="@string/list_name"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currencyList"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="156dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:ems="20"
            android:hint="@string/edit_amount_hint"
            android:autofillHints=""
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ruble"
            android:gravity="end"
            android:textStyle="normal"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0190A2"
        android:text="@string/convert_button_name"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/convertedCurrencyName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="normal"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/convertedCurrencyAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text=""
        android:textStyle="normal"
        android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>